grammars/tree-sitter/grammar.js
		program: ($) => seq(optional($.hash_bang_line), repeat($.statement)),

		export_statement: ($) =>
			choice(
				seq(
					'export',
					choice(
						seq('*', $.from_clause),
						seq($.namespace_export, $.from_clause),
						seq($.export_clause, optional($.from_clause)),
						seq('default', choice($.declaration, seq($.expression, $._semicolon))),
						$.declaration,
					),
					$._semicolon,
				),
				seq(
					'export',
					'type',
					choice(seq('*', $.from_clause), seq($.export_clause, optional($.from_clause))),
					$._semicolon,
				),
			),

		expression_statement: ($) => seq($.expression, $._semicolon),

		statement_block: ($) => seq('{', repeat($.statement), '}'),

		for_of_statement: ($) =>
			seq(
				'for',
				optional('await'),
				'(',
				choice(
					seq(choice('let', 'const', 'var'), choice($._destructuring_pattern, $.identifier)),
					$.identifier,
				),
				'of',
				field('right', $.expression),
				optional(seq(';', 'index', $.identifier)),
				optional(seq(';', 'key', $.expression)),
				')',
				field('body', $.statement),
			),

		fragment_declaration: ($) =>
			prec.left(
				PREC.DECLARATION,
				seq(
					optional('export'),
					optional('default'),
					'fragment',
					optional(field('name', $.identifier)),
					optional(field('type_parameters', $.type_parameters)),
					field('parameters', $.formal_parameters),
					optional($._type_annotation),
					field('body', $.component_body),
				),
			),

		component_body: ($) => seq('{', repeat($.component_statement), '}'),

		component_statement: ($) =>
			choice(
				$.jsx_element,
				$.jsx_fragment,
				$.jsx_self_closing_element,
				$.variable_declaration,
				$.lexical_declaration,
				$.function_declaration,
				$.class_declaration,
				$.expression_statement,
				$.if_statement,
				$.switch_statement,
				$.for_statement,
				$.for_in_statement,
				$.for_of_statement,
				$.while_statement,
				$.do_statement,
				$.try_statement,
				$.return_statement,
				$.throw_statement,
				$.break_statement,
				$.continue_statement,
				$.debugger_statement,
				$.empty_statement,
				$.style_element,
			),

		formal_parameters: ($) => seq('(', optional(commaSep($._formal_parameter)), optional(','), ')'),

		_formal_parameter: ($) => choice($.required_parameter, $.rest_parameter),

		required_parameter: ($) =>
			seq(
				field('pattern', choice($.identifier, $._destructuring_pattern)),
				optional('?'),
				optional($._type_annotation),
				optional($.initializer),
			),

		_destructuring_pattern: ($) =>
			choice($.object_pattern, $.array_pattern, $.lazy_object_pattern, $.lazy_array_pattern),

		object_pattern: ($) =>
			seq(
				'{',
				commaSep(
					choice(
						$.pair_pattern,
						$.rest_pattern,
						$.object_assignment_pattern,
						$.shorthand_property_identifier_pattern,
					),
				),
				optional(','),
				'}',
			),

		member_expression: ($) =>
			prec(
				PREC.MEMBER,
				seq(
					field('object', choice($.expression, $.primary_expression)),
					choice('.', '?.'),
					field('property', choice($.identifier, $.private_property_identifier)),
				),
			),

		property_name: ($) =>
			choice(
				$.identifier,
				$.private_property_identifier,
				$.string,
				$.number,
				$.computed_property_name,
			),

		shorthand_property_identifier: ($) =>
			alias($.identifier, $.shorthand_property_identifier_pattern),

		shorthand_property_identifier_pattern: ($) =>
			alias($.identifier, $.shorthand_property_identifier),

		jsx_element: ($) =>
			seq(
				field('open_tag', $.jsx_opening_element),
				repeat(field('children', $._jsx_child)),
				field('close_tag', $.jsx_closing_element),
			),

		jsx_opening_element: ($) =>
			seq(
				'<',
				optional('@'),
				field('name', $.jsx_element_name),
				repeat(field('attribute', $._jsx_attribute)),
				'>',
			),

		jsx_closing_element: ($) => seq('</', optional('@'), field('name', $.jsx_element_name), '>'),

		jsx_element_name: ($) =>
			choice($.identifier, $.jsx_namespace_name, $.jsx_member_name, $.member_expression),

		// Non-namespaced variant (used for self-closing elements)
		_jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

		jsx_attribute: ($) =>
			seq(
				field('name', choice($.identifier, $.jsx_namespace_name, $.jsx_hyphenated_name)),
				optional(seq('=', field('value', $._jsx_attribute_value))),
			),

		jsx_expression: ($) =>
			seq(
				'{',
				optional(
					choice(
						$.expression,
						$.spread_element,
						seq('...', $.expression),
						seq('ref', choice($.identifier, $.arrow_function, $.function_expression)),
						seq('html', $.expression),
						seq('text', $.expression),
						$.style_directive,
						repeat1($.component_statement),
					),
				),
				'}',
			),

		_jsx_attribute_value: ($) =>
			choice($.string, $.jsx_expression, $.jsx_element, $.jsx_fragment, $.jsx_self_closing_element),

		_jsx_child: ($) =>
			choice(
				$._jsx_statement_child,
				$.jsx_text,
				$.jsx_element,
				$.jsx_fragment,
				$.jsx_self_closing_element,
				$.jsx_expression,
			),

		identifier: ($) => {
			const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			const alphanumeric =
				/[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			return token(seq(alpha, repeat(alphanumeric)));
		},

		string: ($) =>
			choice(
				seq('"', repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), $.escape_sequence)), '"'),
				seq("'", repeat(choice(token.immediate(prec(1, /[^'\\\n]+/)), $.escape_sequence)), "'"),
			),

		_type_annotation: ($) => seq(':', $.type),

		type: ($) =>
			choice(
				$.identifier,
				$.predefined_type,
				$.type_identifier,
				$.nested_type_identifier,
				$.generic_type,
				$.object_type,
				$.array_type,
				$.tuple_type,
				$.union_type,
				$.intersection_type,
				$.function_type,
				$.literal_type,
				$.parenthesized_type,
			),

		predefined_type: ($) =>
			choice('any', 'number', 'boolean', 'string', 'symbol', 'void', 'unknown', 'never', 'object'),

		generic_type: ($) => seq(choice($.identifier, $.nested_type_identifier), $.type_arguments),

		type_arguments: ($) => seq('<', commaSep1($.type), optional(','), '>'),

		object_type: ($) => seq('{', commaSep($.property_signature), optional(','), '}'),

		property_signature: ($) =>
			seq(optional('readonly'), field('name', $.property_name), optional('?'), $._type_annotation),

		_semicolon: ($) => choice($._automatic_semicolon, ';'),
	},
});

function commaSep(rule) {
	return optional(commaSep1(rule));
}

function commaSep1(rule) {
	return seq(rule, repeat(seq(',', rule)));
}
