grammars/tree-sitter/test/corpus/components.txt
===============================
Fragment Declaration With Props
===============================

fragment Button(props: { text: string }) {
  <button>{props.text}</button>
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters
      (required_parameter
        pattern: (identifier)
        (type
          (object_type
            (property_signature
              name: (property_name
                (identifier))
              (type
                (predefined_type)))))))
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier)))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (member_expression
                    object: (identifier)
                    property: (identifier)))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))

===============
Export Fragment
===============

export fragment App() {
  <div>{'Hello World'}</div>
}

---

(program
  (export_statement
    (fragment_declaration
      name: (identifier)
      parameters: (formal_parameters)
      body: (component_body
        (component_statement
          (expression_statement
            (jsx_element
              open_tag: (jsx_opening_element
                name: (jsx_element_name
                  (identifier)))
              children: (jsx_expression
                (component_statement
                  (expression_statement
                    (string))))
              close_tag: (jsx_closing_element
                name: (jsx_element_name
                  (identifier))))))))))

==================
Fragment Declaration
==================

fragment ListItems(props: { items: Array<string> }) {
  for (const item of props.items) {
    <li>{item}</li>
  }
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters
      (required_parameter
        pattern: (identifier)
        (type
          (object_type
            (property_signature
              name: (property_name
                (identifier))
              (type
                (generic_type
                  (identifier)
                  (type_arguments
                    (type
                      (predefined_type))))))))))
    body: (component_body
      (component_statement
        (for_of_statement
          (identifier)
          right: (member_expression
            object: (identifier)
            property: (identifier))
          body: (statement_block
            (expression_statement
              (jsx_element
                open_tag: (jsx_opening_element
                  name: (jsx_element_name
                    (identifier)))
                children: (jsx_expression
                  (component_statement
                    (expression_statement
                      (identifier))))
                close_tag: (jsx_closing_element
                  name: (jsx_element_name
                    (identifier)))))))))))

==================
Children Prop
==================

fragment Card({ children }) {
  <div class="card">
    {children}
  </div>
}

---

(program
  (fragment_declaration
    name: (identifier)
    parameters: (formal_parameters
      (required_parameter
        pattern: (object_pattern
          (shorthand_property_identifier_pattern
            (shorthand_property_identifier)))))
    body: (component_body
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier))
              attribute: (jsx_attribute
                name: (identifier)
                value: (string)))
            children: (jsx_text)
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (identifier))))
            children: (jsx_text)
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))
